<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home_fragment"
            android:title="@string/text_home"
            android:icon="@drawable/home"
            />
        <item
            android:id="@+id/profile_fragment"
            android:title="@string/txt_profile"
            android:icon="@drawable/ic_profile"
            />
        <item
            android:id="@+id/highlight_fragment"
            android:title="@string/txt_highlight"
            />

        <item
            android:id="@+id/moment_fragment"
            android:title="@string/txt_moments" />
        <item
            android:id="@+id/lists_fragment"
            android:title="@string/txt_lists" />

    </group>


</menu>